[package]
name = "physics-timeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0" }
bevy_egui = { version = "0.21.0" }
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", features = [
    "enhanced-determinism",
] }
